[package]
name = "pcalib_test"
version = "0.1.0"
authors = ["Jake Armstrong <Lainkai@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
log = "0.4.8"
tokio = { version = "0.2", features = ["full"] }
simple_logger = "1.6.0"